--- a/TvSeriesBackend/docker-compose.yml
+++ b/TvSeriesBackend/docker-compose.yml
@@ -14,6 +14,6 @@ services:
     ports:
         - "1433:1433"
     environment:
-        SA_PASSWORD: "Crazybabygirl.87"
+        SA_PASSWORD: "yunus.87"
         ACCEPT_EULA: "Y"
    
